# UTL

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  format.cmake  format.sh
include/utl/: algorithm.hpp  allocator.hpp  any.hpp  compressed_pair.hpp  config.hpp  expected.hpp  iterator.hpp  optional.hpp  result.hpp  span.hpp  string.hpp  unique_ptr.hpp  utility.hpp  vector.hpp
lib/: any.cpp  optional.cpp  string.cpp
src/: CMakeLists.txt  example1.cxx
test/: CMakeLists.txt  doctest.h  test_any.cxx  test_compressed_pair.cxx  test_optional.cxx  test_span.cxx  test_string.cxx  test_unique_ptr.cxx  test_utility.cxx  test_vector.cxx
